fixed the extra space issue in and background has merged

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -843,3 +843,6 @@ header.is-scrolled .mobile-menu-icon {
   }
 
 }
+.mobile-menu-btn{
+  margin-top: 0px;
+}
