--- a/src/css/questions.css
+++ b/src/css/questions.css
@@ -204,8 +204,11 @@
 /* PLUS ICON */
 .question-inner {
     background: #0c0c10;
-    border-radius: 17px;
+    border-radius: 18px;
     overflow: hidden;
+
+    border: 1px solid #2ac3ff
+        /* 1px solid gray */
 }
 
 .icon {
@@ -244,7 +247,7 @@
 /* ACTIVE - question bottom radius 0 for sharp join with answer */
 .question-item.active .question-inner {
     /* border-radius: 17px 17px 0 0; */
-    
+
 }
 
 .question-item.active .question-answer {
@@ -282,13 +285,11 @@
         content: "";
         position: absolute;
         inset: 0;
-        background-image: repeating-linear-gradient(
-            -45deg,
-            transparent,
-            transparent 20px,
-            rgba(255, 255, 255, 0.02) 20px,
-            rgba(255, 255, 255, 0.02) 21px
-        );
+        background-image: repeating-linear-gradient(-45deg,
+                transparent,
+                transparent 20px,
+                rgba(255, 255, 255, 0.02) 20px,
+                rgba(255, 255, 255, 0.02) 21px);
         pointer-events: none;
     }
 
@@ -336,23 +337,25 @@
         gap: 12px;
     }
 
-   .question-item {
+    .question-item {
         border-radius: 14px;
     }
 
-         .question-inner {
+    .question-inner {
         border-radius: 13px 13px;
     }
 
     .question-box {
-        font-size:10px;
+        font-size: 10px;
         line-height: 1.4;
         text-align: left;
-        padding-right:0 0.3rem;
+        padding-right: 0 0.3rem;
     }
-    .question-answer{
+
+    .question-answer {
         font-size: 10px;
     }
+
     .icon {
         width: 20px;
         height: 20px;
